[gd_scene load_steps=4 format=2]

[ext_resource path="res://Units/UnitBase.gd" type="Script" id=1]
[ext_resource path="res://Assets/RatWithGunInked.png" type="Texture" id=2]
[ext_resource path="res://Assets/GUI/SelfmadeAssets/CardSlotSimple.png" type="Texture" id=3]

[node name="UnitBase" type="MarginContainer"]
margin_left = 616.0
margin_top = 382.0
margin_right = 616.0
margin_bottom = 382.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3, 17 )
scale = Vector2( 0.0678593, 0.0730735 )
texture = ExtResource( 2 )
centered = false

[node name="Bar1" type="VBoxContainer" parent="."]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )

[node name="TextureRect" type="TextureRect" parent="Bar1"]
margin_right = 100.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
texture = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="Bar1/TextureRect"]
margin_right = 100.0
margin_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Text Text Text"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="Bar1"]
margin_top = 19.0
margin_right = 100.0
margin_bottom = 59.0
rect_min_size = Vector2( 0, 40 )

[node name="HBoxContainer" type="HBoxContainer" parent="Bar1"]
margin_top = 63.0
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="Attack" type="Label" parent="Bar1/HBoxContainer"]
margin_top = 23.0
margin_right = 48.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 8
text = "4"
valign = 2

[node name="Health" type="Label" parent="Bar1/HBoxContainer"]
margin_left = 52.0
margin_top = 23.0
margin_right = 100.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 8
text = "5"
align = 2
valign = 2

[node name="Tween" type="Tween" parent="."]

[node name="Focus" type="TextureButton" parent="."]
margin_right = 100.0
margin_bottom = 100.0

[connection signal="gui_input" from="Focus" to="." method="_on_Focus_gui_input"]
[connection signal="mouse_entered" from="Focus" to="." method="_on_Focus_mouse_entered"]
[connection signal="mouse_exited" from="Focus" to="." method="_on_Focus_mouse_exited"]
